# ctalk

./: AUTHORS  ChangeLog  ChangeLog~  Makefile.am  Makefile.djgpp  Makefile.in  NEWS  README  README.md  X11FileSelectDialog  aclocal.m4  arg.c  config.h.in  configure  configure.ac  ctalk.h  cvartab.c  g.out  info  rt_expr.c  xft
classes/: ANSIButtonPane  ANSILabelPane  ANSIListBoxPane  ANSIMessageBoxPane  ANSIProgressBarPane  ANSIScrollPane  ANSIScrollingListBoxPane  ANSITerminalPane  ANSITerminalStream  ANSITextBoxPane  ANSITextEntryPane  ANSIWidgetPane  ANSIYesNoBoxPane  Application  ApplicationEvent  ArgumentList  Array  AssociativeArray  Bitmap  Boolean  CTime  CalendarTime  Character  Circle  ClassLibraryTree  Collection  DirectoryStream  DisplayFont  Event  Exception  FileStream  Float  GLUTApplication  GLXCanvasPane  InputEvent  Integer  Key  LibrarySearch  Line  List  (+66 more)
classes/libc/: Makefile.am  Makefile.in  a  c  d  e  f  g  l  m  p  r  s  t  x
classes/libctalk/: Makefile.am  Makefile.in
ctpp/: Makefile.am  Makefile.djgpp  Makefile.in  a_opt.c  ansisymbols.c  assert.c  builtins.c  ccompat.c  cexpr.c  chkstate.c  d_opt.c  error.c  escline.c  i_opt.c  include.c  is_fn.c  is_methd.c  lineinfo.c  m_opt.c  macprint.c  main.c  pcvars.c  pmath.c  ppexcept.c  ppop.c  pragma.c  preprocess.c  psubexpr.c  type_of.c  u_opt.c
ctpp/config/: cygwin32-pc-x86.h  djgpp-pc-x86.h  gcc45_types.h  ia64-unknown-linux-gnu.h  linux-gnu-x86.h  powerpc-apple-darwin.h  s390x-suse-linux.h  sparc-linux-gnu.h  sparc-sun-solaris2.8.h  x86_64-amd64-linux-gnu.h
demos/: Makefile  Makefile.am  Makefile.djgpp  README  chaser.c  ctecho.c  ctpath.c  ctrep.c  ctwc.c  hello.c  lclock.c  mdt.c  mdt2.c  sls.c  utils.texi
demos/cgi/: CGIApp  README  ctcheckquery.c  ctenv.c  httpecho.c  pageName.c  web.texi
demos/glut/: README  delta.ca  granite.xpm  gray.xpm  nebula.xpm  pyramid.ca  texblend.ca  texture.ca
demos/glx/: README  blackmarble.xpm  ftfont.ca  glx.ca  glxchaser.ca  glxchaserft.ca  glxexts.ca  glxtexture.ca  xfont.ca
demos/ipc/: README  sockproc.c  sockread.c  sockwrite.c  timeclient.c  timedisplay.c  timesignal.c
demos/net/: addr4.ca  addr6.ca  ip4reader.ca  ip4writer.ca  ip6reader.ca  ip6writer.ca
demos/win32/: Makefile.djgpp  scancode.c  textinput.c  win32.texi
demos/x11/: README  buttons.ca  canvas-copy.c  canvas-copy.ca  checkbox.ca  ctedit.ca  entrybox.ca  entrypane.ca  fileselectbox.ca  labelpane.ca  listbox.ca  listpane.ca  messagebox.ca  popupmenu.ca  roundbuttons.ca  scrollbar.ca  xhello.c  xhello.ca  xspiro.c  xspiro.ca  yesnobox.ca
demos/xft/: README  displaytext.c  x11textpane.c  xfthello.c
doc/: ChangeLog.2008  ChangeLog.2009  ChangeLog.2010  ChangeLog.2011  ChangeLog.2012  ChangeLog.2014  ChangeLog.2015  ChangeLog.2016  ChangeLog.2017  ChangeLog.2018  ChangeLog.2019  ChangeLog.2020  Makefile.am  Makefile.djgpp  Makefile.in  README  XftConfig.sample  classdoc.1  classes.1  classes.el  classlibdoc  ctalk.1  ctalk.info  ctalk.info-1  ctalk.info-2  ctalk.info-3  ctalk.texi  ctalkclasses.1  ctalkintro.1  ctalkmethods.1  ctalkregex.1  ctalktools.info  ctalktools.texi  ctcc.1  ctdb.1  ctpp.1  ctpp.info  ctpp.texi  ctxlogo.1  fnnames.5ctalk  (+16 more)
doc/doctools/: makeclassdoc.pl  makehtmldoc.sh  makelibdoc.pl  refstyle.css
include/: arg.c  argblk.h  break.h  bufmthd.h  builtins.h  chash.h  classlib.h  ctalk.h  ctoobj.c  ctpp.h  ctrlblk.h  cvar.h  defcls.h  djgpp.h  except.h  fndeclstate.h  fnstate.h  fntmpl.h  frame.h  intascii.h  lex.h  lextab.h  lineinfo.h  list.h  message.h  method_decl_states.h  object.h  objtoc.h  option.h  osx_i386_builtins.h  osx_ppc_builtins.h  paramstate.h  parser.h  pending.h  pexcept.h  phash.h  plex.h  pmessage.h  pparser.h  prtinfo.h  (+18 more)
include/xpms/: info128x128.xpm  info64x64.xpm  mini-eye-ok.xpm  mini-eye-slashed.xpm  stop128x128.xpm  stop64x64.xpm  warning128x128.xpm  warning64x64.xpm
lib/: Makefile.am  Makefile.djgpp  Makefile.in  ansitime.c  become.c  bintodec.c  bitmap.c  bnamecmp.c  cclasses.c  chash.c  clibtmpl.c  ctatoll.c  ctdtoa.c  ctitoa.c  ctlltoa.c  ctltoa.c  ctoobj.c  ctsleep.c  cttmpl.c  dblib.c  edittext.c  error_out.c  errorloc.c  escstr.c  event.c  except.c  exec_bin.c  fileglob.c  fmtargtype.c  font.c  fsecure.c  ftlib.c  glewlib.c  glutlib.c  glxlib.c  guiclearrectangle.c  guiclearwindow.c  guidrawline.c  guidrawpoint.c  guidrawrectangle.c  (+88 more)
libctpp/: Makefile.am  Makefile.djgpp  Makefile.in  ansitime.c  bintodec.c  bnamecmp.c  error_out.c  errorloc.c  hash.c  keyword.c  lex.c  lextype.c  lineinfo.c  list.c  message.c  radixof.c  read.c  rt_error.c  rtinfo.c  sformat.c  statfile.c  strcatx.c  substrcpy.c  tempio.c  tempname.c  trimstr.c  val.c  xalloc.c
src/: Makefile.am  Makefile.djgpp  Makefile.in  arg.c  argblk.c  argexprchk.c  c_rval.c  ccompat.c  class.c  collection.c  complexmethd.c  constrcvr.c  control.c  cparse.c  ctcc  ctcc.in  ctdb  ctdb.in  ctoobj.c  cvars.c  cvartab.c  enum.c  errmsgs.c  error.c  eval_arg.c  extern.c  fn_param.c  fn_tmpl.c  fnbuf.c  fninit.c  frame.c  ifexpr.c  include.c  libdeps.c  loop.c  main.c  math.c  mcct.c  method.c  methodbuf.c  (+29 more)
test/: CGIApp  Makefile  Makefile.am  Makefile.djgpp  Makefile.gcc7  README  assocarray.c  basecls.c  basiclist.c  ctrlstrc.c  ctypes-cygwin.c  ctypes-djgpp.c  ctypes-macosx.c  ctypes-sunos.c  ctypes.c  externs.c  g.out  testfunc.c  testmethod.c
test/expect/: README  abs1.c  abs2.c  abs3.c  abs4.c  acos1.c  acos2.c  acos3.c  acos4.c  acosh1.c  acosh2.c  acosh3.c  acosh4.c  addressof1.c  addressof2.c  argblk1.c  argblk10.c  argblk11.c  argblk12.c  argblk13.c  argblk14.c  argblk15.c  argblk16.c  argblk17.c  argblk18.c  argblk19.c  argblk2.c  argblk20.c  argblk21.c  argblk22.c  argblk23.c  argblk24.c  argblk25.c  argblk26.c  argblk27.c  argblk28.c  argblk29.c  argblk3.c  argblk30.c  argblk31.c  (+1108 more)
tools/: langtools
tools/classdoc/: Makefile  classdoc.ca
tools/classes/: Makefile  classes.ca
tools/ctxlogo/: Makefile  ctalk-logo.xpm  ctxlogo.ca
tools/membervars/: Makefile  membervars.ca
tools/methods/: Makefile  methods.ca
tools/methodsource/: Makefile  (+1 more)
(+127 files in other folders)
