# $Id: Makefile.am,v 1.1.1.1 2020/09/13 17:14:20 rkiesling Exp $

SUBDIRS = libc libctalk

pkginclude_HEADERS=ANSIButtonPane ANSILabelPane ANSIListBoxPane \
	ANSIMessageBoxPane ANSIScrollingListBoxPane ANSIScrollPane \
	ANSIProgressBarPane ANSITextBoxPane ANSIYesNoBoxPane \
	ANSITerminalPane ANSITerminalStream ANSITextEntryPane ANSIWidgetPane \
	Application ApplicationEvent ArgumentList Array AssociativeArray \
	Bitmap Boolean CalendarTime Character Circle ClassLibraryTree \
	Collection CTime DirectoryStream DisplayFont Event Exception \
	FileStream Float GLUTApplication GLXCanvasPane Integer InputEvent \
	Key LibrarySearch Line List LongInteger Magnitude Method \
	NetworkStream Object ObjectInspector Pane Pen \
	Point ReadFileStream ReadWriteFileStream Rectangle SignalEvent \
	SignalHandler Stream SortedList String Symbol SystemErrnoException \
	TCPIPNetworkStream TCPIPNetworkStreamReader \
	TCPIPNetworkStreamWriter TCPIPV6NetworkStream \
	TCPIPV6NetworkStreamReader TCPIPV6NetworkStreamWriter TerminalStream \
	TreeNode UNIXNetworkStream \
	UNIXNetworkStreamReader UNIXNetworkStreamWriter Vector \
	Win32TerminalStream WriteFileStream X11Bitmap X11ButtonPane \
	X11CanvasPane X11Cursor X11FileSelectDialog X11Font X11FreeTypeFont \
	X11LabelPane X11ListBox X11ListPane X11MessageBoxPane X11Pane X11Pixmap \
	X11ScrollBarPane X11TerminalStream \
	X11TextPane X11TextEditorPane X11TextEntryBox X11TextEntryPane \
	X11PaneDispatcher X11YesNoBoxPane ctalklib ctldjgpp ctalkdefs.h \
	ctalkGLUTdefs.h

EXTRA_DIST=$(top_builddir)/classes/Makefile.djgpp \
	$(top_builddir)/classes/ctalklib.in


